export const snapshot = {};

snapshot[`sqlr main 1`] = `
{
  code: 0,
  output: "
Usage:   sqlr 
Version: *

Description:

  Command line for interacting with SQL databases. Use '--help' for each command to list it's parameters

Options:

  -h, --help     - Show this help.                            
  -V, --version  - Show the version number for this program.  
  --debug        - Enable debug logs                          

Commands:

  add-connection                      - Add new connection. Run without parameters to use wizard.           
  rm-connection         [connection]  - Remove selected connection                                          
  get-connection        [connection]  - Get details of selected connection                                  
  get-connection-types                - Get available connection types to be used with '--type' parameter in
                                        'add-connection' command                                            
  get-connections                     - List all defined connections                                        
  clear-connections                   - Remove all connections                                              
  describe                            - Describe all tables and columns available in database               
  query                 [queryArg]    - Run query against specified database                                
  update                              - Update sqlr to the latest version                                   
  help                                - Display detailed help text with usage instructions                  

",
  outputError: "",
  sqlrCommand: "sqlr",
}
`;

snapshot[`sqlr main 2`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add-connection -n conn-one -t postgresql -s "postgres://u:p@localhost:5432/db1"',
}
`;

snapshot[`sqlr main 3`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add-connection -n conn-two -t mysql -s "mysql://u:p@localhost:3306/db2"',
}
`;

snapshot[`sqlr main 4`] = `
{
  code: 0,
  output: "  ┌──────────┬────────────┐
  │ Name     │ Type       │
  ├──────────┼────────────┤
  │ conn-one │ postgresql │
  ├──────────┼────────────┤
  │ conn-two │ mysql      │
  └──────────┴────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get-connections",
}
`;

snapshot[`sqlr main 5`] = `
{
  code: 0,
  output: "All connections removed
",
  outputError: "",
  sqlrCommand: "sqlr clear-connections",
}
`;

snapshot[`sqlr main 6`] = `
{
  code: 0,
  output: "  ┌──────┬──────┐
  │ Name │ Type │
  └──────┴──────┘
",
  outputError: "",
  sqlrCommand: "sqlr get-connections",
}
`;

snapshot[`sqlr connection string encoding 1`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add-connection -n enc-mssql -t mssql -s "mssql://sa:World123!%3B@localhost:1433/db?encrypt=true&trustServerCertificate=false"',
}
`;

snapshot[`sqlr connection string encoding 2`] = `
{
  code: 0,
  output: "  ┌───────────┬───────┬──────────────────────────────────────────────────────────────────────────────────┐
  │ Name      │ Type  │ Connection string                                                                │
  ├───────────┼───────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ enc-mssql │ mssql │ mssql://sa:World123!;@localhost:1433/db?encrypt=true&trustServerCertificate=fals │
  │           │       │ e                                                                                │
  └───────────┴───────┴──────────────────────────────────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get-connection enc-mssql",
}
`;

snapshot[`sqlr connection string encoding 3`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add-connection -n enc-pg -t postgresql -s "postgres://localhost:5432/db?user=admin&password=p%40ss%3Aw%23rd&application_name=sqlr&sslmode=prefer"',
}
`;

snapshot[`sqlr connection string encoding 4`] = `
{
  code: 0,
  output: "  ┌────────┬────────────┬──────────────────────────────────────────────────────────────────────────────────┐
  │ Name   │ Type       │ Connection string                                                                │
  ├────────┼────────────┼──────────────────────────────────────────────────────────────────────────────────┤
  │ enc-pg │ postgresql │ postgres://localhost:5432/db?user=admin&password=p@ss:w#rd&application_name=sqlr │
  │        │            │ &sslmode=prefer                                                                  │
  └────────┴────────────┴──────────────────────────────────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get-connection enc-pg",
}
`;

snapshot[`sqlr connection string encoding 5`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: \`sqlr add-connection -n enc-mysql -t mysql -s 'mysql://u:p%40ss@localhost:3306/db?ssl={"rejectUnauthorized":false}'\`,
}
`;

snapshot[`sqlr connection string encoding 6`] = `
{
  code: 0,
  output: '  ┌───────────┬───────┬───────────────────────────────────────────────────────────────────┐
  │ Name      │ Type  │ Connection string                                                 │
  ├───────────┼───────┼───────────────────────────────────────────────────────────────────┤
  │ enc-mysql │ mysql │ mysql://u:p@ss@localhost:3306/db?ssl={"rejectUnauthorized":false} │
  └───────────┴───────┴───────────────────────────────────────────────────────────────────┘
',
  outputError: "",
  sqlrCommand: "sqlr get-connection enc-mysql",
}
`;

snapshot[`sqlr connection string encoding 7`] = `
{
  code: 0,
  output: "Connection has been added
",
  outputError: "",
  sqlrCommand: 'sqlr add-connection -n enc-ch -t clickhouse -s "https://user:p%40ss%3Bword@localhost:8443?database=mydb"',
}
`;

snapshot[`sqlr connection string encoding 8`] = `
{
  code: 0,
  output: "  ┌────────┬────────────┬─────────────────────────────────────────────────────┐
  │ Name   │ Type       │ Connection string                                   │
  ├────────┼────────────┼─────────────────────────────────────────────────────┤
  │ enc-ch │ clickhouse │ https://user:p@ss;word@localhost:8443?database=mydb │
  └────────┴────────────┴─────────────────────────────────────────────────────┘
",
  outputError: "",
  sqlrCommand: "sqlr get-connection enc-ch",
}
`;

snapshot[`sqlr connection string encoding 9`] = `
{
  code: 0,
  output: "All connections removed
",
  outputError: "",
  sqlrCommand: "sqlr clear-connections",
}
`;
